--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -4,7 +4,7 @@
     "outDir": "./dist",
     "module": "commonjs",
     "target": "ES2020",
-    "moduleResolution": "node",
+    "moduleResolution": "node10",
     "sourceMap": true,
     "strict": true,
     "skipLibCheck": true,
